# decentriq-platform

./: .firebaserc  .gitignore  README.md  compile_proto.sh  firebase.json  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
avato/: __init__.py  api.py  authentication.py  client.py  config.py  instance.py  secret.py  storage.py  verification.py
avato/proto/: avato_enclave_pb2.py  column_type_pb2.py  csv_table_format_pb2.py  encrypted_message.py  json_object_format_pb2.py  length_delimited.py  proto_util_pb2.py
decentriq_platform/: __init__.py  api.py  attestation.py  authentication.py  builders.py  certs.py  channel.py  client.py  compute.py  config.py  connection.py  decoder.py  endorsement.py  graphql.py  helpers.py  keychain.py  logger.py  lookup_tables.py  node.py  permission.py  platform.py  session.py  storage.py  types.py  verification.py
decentriq_platform/analytics/: __init__.py  analytics_dcr.py  builder.py  dataset_sink_compute_nodes.py  existing_builder.py  high_level_node.py  matching_compute_nodes.py  node_definitions.py  preview_compute_nodes.py  python_compute_nodes.py  python_environment_compute_nodes.py  r_compute_nodes.py  raw_data_nodes.py  s3_sink_compute_nodes.py  script.py  sql_compute_nodes.py  sql_helper.py  sqlite_compute_nodes.py  synthetic_compute_nodes.py  table_data_nodes.py  version.py
decentriq_platform/azure_blob_storage/: __init__.py
decentriq_platform/container/: __init__.py  attestation.py  compute.py  helpers.py
decentriq_platform/data_connectors/: __init__.py  export_dependency_types.py
decentriq_platform/data_lab/: __init__.py  builder.py  data_lab.py
decentriq_platform/data_science/: __init__.py
decentriq_platform/data_source_s3/: __init__.py
decentriq_platform/legacy/: node.py  (+15 more)
docs/: deploy_docs.sh  getting_started.md  test_docs_code.sh
example/: README.md  demo.py
integration-tests/: Jenkinsfile.groovy
proto/: adform_dsp.proto  attestation.proto  avato_enclave.proto  azure_blob_storage.proto  column_type.proto  compute_container.proto  compute_post.proto  compute_s3_sink.proto  compute_sql.proto  csv_table_format.proto  data_room.proto  data_source_s3.proto  data_source_snowflake.proto  dataset_sink.proto  delta_enclave_api.proto  gcg.proto  google_ad_manager.proto  google_dv_360_sink.proto  identity_endorsement.proto  json_object_format.proto  meta_sink.proto  metering.proto  microsoft_dsp.proto  permutive.proto  proto_util.proto  salesforce.proto  synth_data.proto  waterfront.proto
scripts/: publish.sh
tests/: test_authentication.py  test_complete.py  test_enclave_authentication.py  test_example.py  test_session.py  test_storage.py  test_user_exists.py  test_verification.py
(+174 files in other folders)
