[tool.poetry]
name = "decentriq-platform"
version = "0.13.0"
description = "Python client library for the Decentriq platform"
authors = ["decentriq <opensource@decentriq.com>"]
readme = 'README.md'
repository = "https://github.com/decentriq/decentriq-platform"
homepage = "https://github.com/decentriq/decentriq-platform"

[tool.poetry.dependencies]
# main package
python = "^3.9"
typing-extensions = "^4.4.0"
protobuf = "4.21.9"
requests = "^2.28.1"
sgx-ias-structs = "^0.1.8"
cryptography = "^38.0.4"
chily = "^0.6.0"
asn1crypto = "^1.5.1"
oscrypto = "^1.3.0"
certvalidator = "^0.11.1"
ecdsa = "^0.18.0"
pem = "^21.2.0"
certifi = "^2022.12.7"
# sql compute 
sqloxide = "^0.1.26"

[tool.poetry.dev-dependencies]
mypy-protobuf = "^3.4.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
