[tool.poetry]
name = "decentriq-platform"
version = "0.17.0"
description = "Python client library for the Decentriq platform"
authors = ["decentriq <opensource@decentriq.com>"]
readme = 'README.md'
repository = "https://github.com/decentriq/decentriq-platform"
homepage = "https://github.com/decentriq/decentriq-platform"

[tool.poetry.dependencies]
# main package
python = "^3.9"
typing-extensions = "^4.4.0"
protobuf = "4.21.9"
requests = "^2.28.1"
sgx-ias-structs = "^0.1.8"
cryptography = "^41.0.2"
chily = "^0.7.0"
asn1crypto = "^1.5.1"
oscrypto = "^1.3.0"
certvalidator = "^0.11.1"
ecdsa = "^0.18.0"
pem = "^21.2.0"
certifi = "^2022.12.7"
sqloxide = "^0.1.26"
cbor2 = "^5.4.6"

[tool.poetry.dev-dependencies]
mypy-protobuf = "^3.4.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
